--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "bernestoalberto",
   "license": "ISC",
   "dependencies": {
+    "ethereumjs-tx": "^1.3.7",
     "i": "^0.3.6",
     "nodemon": "^1.18.6",
     "npm": "^6.4.1",
